@@ -9,7 +9,7 @@ version = 0.06
 [ExtraTests]
 
 [Prereqs]
-Time::Piece = 1.30
+Time::Piece = 1.32
 Time::Local = 1.26
 Date::Parse = 1.17
 Time::ParseDate = 2015.0925
