@@ -2,6 +2,11 @@ Revision history for Date-Easy
 
 {{$NEXT}}
 
+    [Efficiency Improvements]
+    * resimplify `strftime` implementation to simple delegation
+      this made possible by the fixing of Time::Piece GitHub #24 (thx ESAYM!)
+      that fix means we must require at least 1.32 of Time::Piece
+
 0.06      2018-06-15 22:34:29-07:00 America/Los_Angeles
 
     [Bug Fixes]
